--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,8 @@
     <string name="zero">0</string>
     <string name="add_data">Add Data</string>
     <string name="comma">,</string>
+    <string name="catchBasin">Catch Basin</string>
+    <string name="view_data">View Data</string>
+    <string name="recorded_catch_basins">Recorded Catch Basins</string>
+
 </resources>
