--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,5 +54,6 @@
     <string name="catchBasin">Catch Basin</string>
     <string name="view_data">View Data</string>
     <string name="recorded_catch_basins">Recorded Catch Basins</string>
+    <string name="create_spreadsheet">Create Spreadsheet</string>
 
 </resources>
